src/ui/comment/Comment.css
.comment {
    position: relative;
    margin-bottom: .6rem;
    width: max-content;
    max-width: 100%;
    display: flex;
}

.comment .details {
    flex: auto;
    margin-left: .25rem;
    max-width: calc(100% - .25rem - 36px);
}

.comment .content {
    background-color: var(--comments);
    border-radius: 5px;
    box-sizing: content-box;
    padding: .5rem;
    width: max-content;
    min-width: 16rem;
    max-width: calc(100% - 1rem);
    overflow-wrap: break-word;
    text-align: start;
}

.comment .content P:last-child {
    margin-bottom: 0;
}

.comment.focused .content {
    border: dashed 1px var(--bs-primary);
}

.comment .content.preview {
    overflow-y: auto;
}

@media only screen and (max-width: 575px) {
    .comment .content.preview {
        max-height: 150vh;
    }
}

@media only screen and (min-width: 576px) {
    .comment .content.preview {
        max-height: 100vh;
    }
}

.comment .content IMG, .comment .content IFRAME {
    max-width: min(100vw - 7rem, var(--feed-width) - 6.5rem);
    max-height: 16rem;
}

.comment .content .read-more {
    width: 100%;
    text-align: left;
    padding-left: 0;
    padding-top: 0;
}

@media (any-hover: hover) {
    .comment .chevron {
        visibility: hidden;
    }

    .comment:hover .chevron {
        visibility: visible;
    }
}

.comment .reactions-line {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
}

